# c_learn

./: CMakeLists.txt  Makefile  README.md
.cache/clangd/index/: files.c.8EEB6017310AD168.idx  files.h.A199993ECDD7349E.idx  main.c.FC92397C00BDAC4A.idx  memMngmnt.c.BC67FB25D86E420B.idx  memMngmnt.h.204A9C773BA0F8B9.idx  more.c.42E928EE28457A14.idx  more.h.0CE11F998CBD7FE7.idx  structs.c.836DF777D3D3F2CD.idx  structs.h.0CFBDCAC86957678.idx
cExtra/: bank.c  cFile.c  guess.c  test.txt  win.c
cTrix/: CMakeLists.txt  Makefile  README.md
cTrix/include/: matrix.h  matrixLib.h
cTrix/src/: main.c  matrix.c  matrixLib.c  test.c
dsa/: .ccc_config  .clangd  Makefile  README.md  compile_commands.json  gen-ccjson.sh  main
dsa/include/: all.h  graph.h  heap.h  queue.h  sortestPath.h  tree.h
dsa/src/: array.c  basicHash.c  graph.c  hashTable.c  heap.c  linkedList.c  main.c  queue.c  sortestPath.c  stack.c  tree.c  tree.h
include/: files.h  memMngmnt.h  more.h  structs.h
lrucache/: lrucache.c  lrucache.h  main.c
src/: files.c  main.c  memMngmnt.c  more.c  structs.c
tic/: CMakeLists.txt  Makefile  README.md
tic/src/: main.c
